# cppt

./: Cargo.toml  readme.md
examples/src/: class.cpp  class.hpp
examples/src/test_namespace/: class.cpp  class.hpp  script.cpp
src/: creator.rs  format.rs  main.rs  tests.rs
src/creator/: cpp_class.rs  cpp_script.rs  traits.rs
src/creator/traits/: dirname.rs  header_creator.rs  namespaced_creator.rs  src_creator.rs
